# iot_gathering

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.db-amd64  README.md  SESSION.md  pyproject.toml
docs/: docker-compose.iot-gathering.yml
docs/superpowers/plans/: 2026-05-19-web-ui-daemon.md  2026-07-07-modbus-rtu-monitor-probe.md
docs/superpowers/specs/: 2026-05-19-web-ui-daemon-design.md  2026-07-07-modbus-rtu-monitor-probe-design.md
src/industrial_gateway/: __init__.py  app.py  config_schema.py  defaults.py  logging_worker.py  models.py  registry.py  store.py  workers.py
src/industrial_gateway/drivers/: __init__.py  modbus.py  modbus_rtu_monitor.py  mqtt.py  opcua.py
src/industrial_gateway/gui/: connection_forms.py  main_window.py  plugin_forms.py
src/industrial_gateway/services/: __init__.py  config_service.py  runtime_manager.py  topic_request_client.py  topic_responder.py
src/industrial_gateway/sinks/: __init__.py  database.py  mqtt.py
src/industrial_gateway/web/: __init__.py  api.py  app.py  auth.py
src/industrial_gateway/web/static/: app.js  index.html  styles.css
tests/: test_app_import.py  test_config_service.py  test_connection_forms.py  test_db_sinks.py  test_gui_tag_csv.py  test_logging_worker.py  test_modbus_driver.py  test_modbus_rtu_monitor.py  test_models.py  test_mqtt_input_driver.py  test_mqtt_sink.py  test_mssql_removed.py  test_opcua_driver.py  test_opcua_integration.py  test_packaging.py  test_plugin_forms.py  test_plugin_profiles.py  test_registry.py  test_runtime_manager.py  test_runtime_modes.py  test_sink_config.py  test_store.py  test_topic_responder.py  test_web_api.py  test_web_app_import.py  test_web_app_paths.py  test_web_auth.py  test_web_static.py  test_workers.py
